# inspire

./: .gitignore  LICENSE  README.md
inspire_itk/: CMakeLists.txt
inspire_itk/config/: brain3d_config.json  default.json  retinal2d_config.json
inspire_itk/source/common/: command.h  itkImageProcessingTools.h  minicsv.h  progress.h  quantization.h
inspire_itk/source/programs/: evaluateRegistrationMain.cpp  imageInfoMain.cpp  registerMain.cpp  synthDeformImageMain.cpp  transformLandmarksMain.cpp  transformMain.cpp
inspire_itk/source/registration/: alphaBSplineRegistration.h  alphaLinearRegistration.h  inspireRegister.h  mcAlphaCutPointToSetDistance.h  samplers.h
inspire_itk/source/samplers/: pointSampler.h  pointSamplerBase.h  quasiRandomGenerator.h  valueSampler.h
inspire_itk/source/tests/: testFixedPointNumbers.cpp  testPointSamplers.cpp  testRegistration.cpp  testSuite.cpp  testValueSamplers.cpp
inspire_itk/source/transforms/: itkAlphaSMDAffineTransform.h
